# octopus-sensing-monitoring

./: README.md  build.sh
server/: README.md  main.py  pyproject.toml
server/octopus_sensing_data_visualizer/: handlers.py  main.py
server/octopus_sensing_monitoring/: __init__.py  handlers.py  main.py
ui/: package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.config.js
ui/public/: index.html
ui/src/: app.tsx  index.css  index.html  index.ts  index.tsx  linechart.tsx  services.ts  types.ts
