[tool.poetry]
name = "octopus-sensing-data-visualizer"
version = "1.0.0"
description = "Web base data visualizer for https://octopus-sensing.nastaran-saffar.me"
authors = ["Aidin Gharibnavaz <aidin@aidinhut.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/aidin36/octopus-sensing-data-visualizer"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
cherrypy = "^18.6.0"
numpy = "^1.19.1"
Pillow = "^7.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.autopep8]
max_line_length = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

